Change Handler hashCode method to use URI rather than URL
Similar problem to the one described in the task:

https://github.com/spring-projects/spring-boot/pull/20872